--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -3,48 +3,129 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
 }
 body {
-	line-height: 1;
+    line-height: 1;
 }
-ol, ul {
-	list-style: none;
+ol,
+ul {
+    list-style: none;
 }
-blockquote, q {
-	quotes: none;
+blockquote,
+q {
+    quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: "";
+    content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 /* Set every element's box-sizing to border-box */
@@ -52,15 +133,124 @@ table {
     box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
     height: 100%;
-    font-family: 'Titillium Web', sans-serif;
+    font-family: "Titillium Web", sans-serif;
 }
 
-h1, h2, h3, h4, h5 {
-    font-family: 'Bangers', cursive;
+h1,
+h2,
+h3,
+h4,
+h5 {
+    font-family: "Bangers", cursive;
     letter-spacing: 1px;
     margin-bottom: 15px;
 }
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+header,
+section,
+footer {
+    margin: 0 auto;
+    max-width: 900px;
+}
+hr {
+    margin: 0 3%;
+    display: inline-block;
+    width: 100%;
+}
+
+/*** Header ***/
+
+.header-container {
+    background: #0379df;
+    position: fixed;
+    width: 100%;
+    box-shadow: 0 4px 5px -3px rgba(128, 128, 128, 0.8);
+}
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+nav {
+    display: flex;
+    width: 65%;
+    justify-content: space-around;
+}
+nav a {
+    text-decoration: none;
+    color: white;
+    margin: 35px 0;
+    font-size: 15px;
+}
+nav a:hover {
+    text-decoration: underline;
+}
+
+/*** Content ***/
+
+.hero {
+    padding-top: 115px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+}
+.hero h1 {
+    font-size: 70px;
+}
+.hero span {
+    font-size: 16px;
+    padding: 8px 40px;
+    border: 1px solid black;
+    display: inline-block;
+}
+.content img {
+    padding: 0 3%;
+}
+.container {
+    display: flex;
+}
+.info-box {
+    margin: 3%;
+}
+
+/*** Footer ***/
+
+footer .copyright {
+    text-align: center;
+    margin: 30px 0 50px;
+}
+
+/*** Media Queries ***/
+
+@media screen and (max-width: 767px) {
+    .hero,
+    .container {
+        flex-direction: column;
+    }
+    .content img {
+        margin: 10px 0;
+    }
+    header {
+        flex-direction: column;
+    }
+    header img {
+        order: -1;
+        margin-top: 15px;
+    }
+    nav {
+        width: 100%;
+        justify-content: space-evenly;
+    }
+    nav a {
+        margin: 20px 0;
+    }
+    section.hero div {
+        margin: 3% 0;
+    }
+}
